2002-02-12  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: made the socket non-blocking at the beginning of
	RunServerSSLHandshake, and set it back to blocking before the
	function returns.

	* ssl.c: took out #if 0 for the SetNonBlocking function. It's
	not used right now, but it had nested #if 0's, which makes me
	nervous.

	* ssl.c: moved SSL_set_app_data call from before to after
	SSL_set_accept_state call, as it was in 1.1c.

	* ssl.c: added some debug code in NsOpenSSLSend to help debug
	Solaris problem.

2002-02-08  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: reverted NsOpenSSLSend back to the way nsopenssl 1.1c
	worked to try and resolve a problem on Solaris where images and
	possibly pages of certain sizes fail to download
	correctly. Haven't tested yet.

2002-02-08  Scott S. Goodwin  <scott@scottg.net>

	* ssl.c: added some debugging code to log errors when
	NsOpenSSLSend fails. This is to try and debug a Solaris issue.

2001-12-27  Scott S. Goodwin  <scott@scottg.net>

	* https.tcl: cleaned up the ns_httpspost proc and got rid of the
	debugging statements.

2001-12-12  Scott S. Goodwin  <scott@scottg.net>

	* https.tcl: form.tcl doesn't respect the fact that a boundary
	value declaration may be wrapped in double quotes. It will work
	with this:

          multipart/form-data, boundary=--123456789

        but not this:

          multipart/form-data, boundary="--123456789"

	Changed https.tcl to work with form.tcl (for now).

2001-12-02  Scott S. Goodwin  <scott@scottg.net>

	* config.h: Added the CONFIG_MODULEDIR to create the ModuleDir
	parameter name.

	* init.c: Altered CheckModuleDir so that the config parameter
	ModuleDir can be used to point to somewhere outside of the
	AOLserver directory area. If ModuleDir is specified, the
	CheckModuleDir does *not* try and create the directory for you but
	assumes if you've already got it set up.

	* config.c: Used Ns_MakePath in place of Ns_DStringVarAppend to